Fixing layout issue in skill page

--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -3,8 +3,8 @@
 }
 
 img {
-  min-height: 65px;
-  width: 65px;
+  height: 4rem;
+  width: 4rem;
   margin: auto;
   margin-top: 15px;
   object-fit: contain;
